Bug 1926381 Small Mahara 21.04 styling fixes
- Feedback modal user icons had extra padding at the bottom, gave
it a fixed height to help. Then it squished into a rectangle at
small width so put in fixed max-width. This happened on group
members list too.

- My tags results edit tag button had odd alignment, pushed it back
up to align with top of card.

- skins' block detail link needs underline removed.

- forum posts long usernames pushes the post content, putting in a
max-width to tame that.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_user-icon.scss
+++ b/htdocs/theme/raw/sass/components/_user-icon.scss
@@ -108,15 +108,19 @@ a.user-icon, a .user-icon {
 }
 .user-icon-30 {
     width: 1.875rem + ($thumbnail-border-width * 2) + ($thumbnail-padding * 2);
+    height: 1.875rem + ($thumbnail-border-width * 2) + ($thumbnail-padding * 2);
     img {
         width: 1.875rem; // 30px;
+        max-width: 1.875rem; // 30px;
         height: 1.875rem; // 30px;
     }
 }
 .user-icon-40 {
     width: 2.5rem + ($thumbnail-border-width * 2) + ($thumbnail-padding * 2);
+    height: 2.5rem + ($thumbnail-border-width * 2) + ($thumbnail-padding * 2);
     img {
         width: 2.5rem; // 40px;
+        max-width: 2.5rem; // 40px;
         height: 2.5rem; // 40px;
     }
 }
