--- a/htdocs/theme/raw/sass/features/_forum-post.scss
+++ b/htdocs/theme/raw/sass/features/_forum-post.scss
@@ -6,8 +6,12 @@
     border-left: 5px solid theme-color("secondary");
     padding-left: $spacing-lg;
     .forumpostleft {
-        min-width: 7.5rem; // 120px;
+        max-width: 7.5rem; // 120px;
         padding-right: $spacing-xl;
+
+        .poster {
+            word-wrap: break-word;
+        }
     }
     .media-body {
         padding-bottom: $spacing-base;
